Fixed bugs with undo/redo of merging